Feat: 全局设置页

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "shit_minecraft_launcher",
+    "name": "black_magic_craft",
     "version": "1.0.0",
     "description": "",
     "main": "main.js",
