Feat(控件): 新增开关按钮、命令按钮、文件选择 Feat(动画): 卡片展开动画

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "black_magic_craft",
     "version": "1.0.0",
-    "description": "",
+    "description": "Black Magic Craft 启动器",
     "main": "main.js",
     "scripts": {
         "start": "electron .",
