--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,9 @@
 {
     "name": "black_magic_craft",
     "version": "1.0.0",
-    "description": "",
+    "description": "Black Magic Craft 启动器",
     "main": "main.js",
     "author": "Broken_Deer",
-    "license": "GPL-3.0"
+    "license": "GPL-3.0",
+    "dependencies": {}
 }
