--- a/app/package.json
+++ b/app/package.json
@@ -5,5 +5,7 @@
     "main": "main.js",
     "author": "Broken_Deer",
     "license": "GPL-3.0",
-    "dependencies": {}
+    "dependencies": {
+        "request": "^2.88.2"
+    }
 }
