--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,5 @@
 {
-    // 使用 IntelliSense 了解相关属性。 
+    // 使用 IntelliSense 了解相关属性。
     // 悬停以查看现有属性的描述。
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
@@ -7,13 +7,17 @@
         {
             "name": "black_magic_craft",
             "request": "launch",
-            "runtimeArgs": [
-                "start"
-            ],
+            "runtimeArgs": ["start"],
             "runtimeExecutable": "npm",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
+            "skipFiles": ["<node_internals>/**"],
+            "type": "node"
+        },
+        {
+            "name": "test",
+            "request": "launch",
+            "runtimeArgs": ["test.mjs"],
+            "runtimeExecutable": "node",
+            "skipFiles": ["<node_internals>/**"],
             "type": "node"
         }
     ]
