--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "black_magic_craft",
+    "name": "Black Magic Craft",
     "version": "1.0.0",
     "description": "Black Magic Craft 启动器",
     "main": "main.js",
@@ -11,11 +11,10 @@
     "author": "Broken_Deer",
     "license": "GPL-3.0",
     "devDependencies": {
-        "@types/node": "^18.11.9",
-        "electron": "^21.2.2",
-        "electron-builder": "^23.6.0",
-        "electron-packager": "^17.1.1",
-        "path": "^0.12.7"
+        "electron": "21.2.2",
+        "electron-builder": "23.6.0",
+        "electron-packager": "17.1.1",
+        "path": "0.12.7"
     },
     "build": {
         "productName": "Black Magic Craft",
@@ -48,10 +47,10 @@
         }
     },
     "dependencies": {
-        "@xmcl/installer": "^4.4.0",
-        "got": "^12.5.2",
-        "graceful-fs": "^4.2.10",
-        "p-limit": "^4.0.0",
-        "p-queue": "^7.3.0"
+        "electron-store": "8.1.0",
+        "got": "12.5.2",
+        "graceful-fs": "4.2.10",
+        "p-limit": "4.0.0",
+        "p-queue": "7.3.0"
     }
 }
