Chore: 修复安装程序一堆漏洞、ui更新

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "editor.cursorSmoothCaretAnimation": "on",
-    "C_Cpp.errorSquiggles": "enabled"
+    "C_Cpp.errorSquiggles": "enabled",
+    "commentTranslate.hover.enabled": true
 }
