--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "black-lagic-launcher",
+    "name": "Black Magic Launcher",
     "version": "1.0.0",
     "description": "Black Magic Launcher 启动器",
     "main": "main.js",
