--- a/package.json
+++ b/package.json
@@ -48,7 +48,11 @@
         }
     },
     "dependencies": {
+        "@xmcl/core": "2.10.1",
         "@xmcl/installer": "4.4.0",
+        "@xmcl/mod-parser": "3.3.0",
+        "@xmcl/resourcepack": "1.1.3",
+        "@xmcl/system": "2.2.3",
         "electron-store": "8.1.0",
         "got": "12.5.2",
         "graceful-fs": "4.2.10",
