--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "electron-store": "8.1.0",
         "got": "12.5.2",
         "graceful-fs": "4.2.10",
+        "long": "^5.2.1",
         "p-limit": "4.0.0",
         "p-queue": "7.3.0",
         "prismarine-nbt": "2.2.1"
