--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "@xmcl/resourcepack": "1.1.3",
         "@xmcl/system": "2.2.3",
         "electron-store": "8.1.0",
+        "getmac": "^5.20.0",
         "got": "12.5.2",
         "graceful-fs": "4.2.10",
         "long": "^5.2.1",
